# android-tv-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
companion/: tv-autoclean.sh
companion/termux/: clearram.sh
companion/termux/boot/: 10-clearram.sh
tools/: make_demo.py
tvdash/: __init__.py  __main__.py  adb.py  app.py  collectors.py  widgets.py  worker.py
